--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
-    "tailwindcss": "^4.1.3"
+    "tailwindcss": "^4.1.3",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
